--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         }
     ],
     "require": {
+        "php": ">=7.0",
         "firebase/php-jwt": "^5.2",
         "lcobucci/jwt": "^3.3",
         "socialiteproviders/manager": "^2.0|^3.0"
